Version 0.1.27     unreleased

	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
	* Add .python-version in preferred order to support pyenv.
	* Add Sphinx configuration path to .readthedocs.yml.
	* Adjust GHA build process to allow builds for stacked PRs.
	* Add a new `run clean` target to clean up generated data.
	* Move unit tests from `tests` into `src/tests/uciparse`.
	* Update the MyPy configuration so we're using latest rules.
	* Replace black, isort, and pylint with the Ruff formatter and linter.
	* Address Ruff linter warnings and modernize the code to 2025 standards.
	* Remove importlib-metadata dependency in favor of standard library.
	* Update all dependencies and outdated constraints.

Version 0.1.26     08 Jan 2025

	* Migrate to Poetry v2 and project-managed Poetry plugins.
	* Move configuration into pyproject.toml for pytest, mypy & coverage.
	* Upgrade to gha-shared-workflows@v8 for Poetry v2 support.
	* Update all dependencies and outdated constraints.

Version 0.1.25     02 Jan 2025

	* Add GitHub security policy in SECURITY.md.
	* Pull in latest version of run-script-framework.
	* Update dependencies to address Dependabot warnings.
	* Upgrade to gha-shared-workflows@v7 with publish improvements.
	* Add a default .pytest.ini file based on new cookiecutter template.
	* Change the default branch in GitHub from master to main.

Version 0.1.24     15 Oct 2024

	* Pull in latest updates from run-script-framework.
	* Simplify GHA integration with coveralls.io.
	* Update transitive dependencies to address Dependabot warnings.
	* Add support for Python v3.13 and drop support for v3.9.
	* Upgrade to Poetry v1.8.4 for official Python 3.13 support.
	* Bump readthedocs build to python 3.10 and ubuntu-24.04.

Version 0.1.23     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.